@@ -1,5 +1,3 @@
-// $Id$
-
 //=============================================================================
 /**
  *  @file    Netlink_Addr.h
